assets/src/scss/__global.scss
$govuk-global-styles: true;

@function custom-url-handler($filename) {
    @return url("/fonts/#{$filename}");
  }

$govuk-font-url-function: 'custom-url-handler';

@import "node_modules/govuk-frontend/dist/govuk/all";
@import "./govuk-language-select";

* {
  font-family: "GDS Transport", Arial, sans-serif;
}

.border-box {
    border-style: solid;
    border-width: thin;
    border-color: $govuk-border-colour;
    padding: 2em;
}

.white-space-pre {
    white-space: pre !important;
}

@media (max-width: 640px) {
    #search-input-group > * {
        display: flex;
        justify-content: center;
    }

    #your-companies-cancel-search-link {
        margin-top: 20px;
        margin-left: 0;
    }
    
    #search {
        max-width: unset;
        margin-right: 0;
        margin-bottom: 10px;
    }

    .mobile-view-max-width-unset {
        max-width: unset !important;
    }
}

#footer ul li {
    margin-bottom: 10px;
}

.new-border-bottom{
    border-bottom: 10px solid #005ea5;
}

.does-not-verify-link-spacing{
    padding: 12px 0 8px 0;
}

/* styling from https://github.com/companieshouse/find-update-company-info-prototype/blob/main/app/assets/sass/custom.scss */

.grid-row:after, fieldset:after, .form-section:after, .form-group:after, .form-block:after, .notice:after, #content:after, .panel:after, #global-nav .inner:after, .navigation-list:after, .pager ul:after, ol.breadcrumb:after, ul.pager:after, .section-tabs:after {
  content: "";
  display: block;
  clear: both;
}

#chs-customer-insights-top {
  position: relative;
  background-color: #005ea5;
  padding: 1em;
  z-index: 10;
  margin: -10px 0 1em 0;
  color: #fff;
}

#chs-customer-insights-top a:link, #chs-customer-insights-top a:visited {
  color: #fff;
}

#chs-customer-insights-top a:focus {
  color: #0b0c0c;
}

#chs-customer-insights-top a:hover {
  color: #bfc1c3;
}

#chs-customer-insights-top a.secondary-customer-insights {
  float: right;
}

#chs-customer-insights, #customer-insights-top-banner {
  background-color: #005ea5;
  padding: 0.5em 0.5em 0;
  margin: 0 auto 0;
  height: auto;
  width: auto !important;
  max-width: 960px;
  border-bottom: 10px solid #005ea5;
}

#customer-insights-top-banner{
    margin-top: -10px;
}

#chs-customer-insights a:link, #chs-customer-insights a:visited, #customer-insights-top-banner a:link, #customer-insights-top-banner a:visited {
  color: #fff;
}

#chs-customer-insights a:focus, #customer-insights-top-banner a:focus {
  color: #0b0c0c;
}

#chs-customer-insights a:hover, #customer-insights-top-banner a:hover{
  color: #bfc1c3;
}

#chs-customer-insights a.secondary-customer-insights {
  float: right;
}

@media (max-width: 641px) {
  #chs-customer-insights {
    padding-bottom: 3em;
    width: auto;
    max-width: none;
  }

  #chs-customer-insights a {
    padding-bottom: 1em;
  }

  #chs-customer-insights a.secondary-customer-insights {
    float: left;
    margin-top: 1em;
    margin-right: 7em;
  }
}

@media (max-width: 400px) {
  #chs-customer-insights a.secondary-customer-insights {
    float: left;
    margin-top: 1em;
    margin-right: auto;
  }
}

@media (max-width: 959px) and (min-width: 700px) {
  #chs-customer-insights {
    padding-bottom: 0.5em;
    max-width: none;
    width: auto;
  }
}

.blue-footer-border {
  border-bottom: 10px solid #005ea5;
}

